# PS

./: .gitignore  14710.java  1546.c  17450.java  32246.java  9663.c  CMakeLists.txt  README.md  a.out
2021/: 1546.c  BOJ9663.c
B1181/: A1181.java
B14710/: 14710.java
B1546/: BOJ1546.c
B17450/: 17450.java
B32246/: 32246.java
B32247/: 32247.java
B9663/: BOJ9663.c
